syntax = "proto3";

import "message.proto";
option go_package = "./proto";

message SelectDeviceClientMessage {
	string deviceId = 1;
}

message DashboardClientMessage {
	oneof payload {
		SelectDeviceClientMessage selectDevice = 1;
	}
}

message DeviceSelected {
	Maus maus = 1;
}
message DeviceLostMessage {}

message Maus {
	string id = 1;
	string mac = 2;
	string ip = 3;
}

message NewDeviceMessage {
	repeated Maus maus = 1;
}

message DashboardServerMessage {
	oneof payload {
		DeviceSelected selected = 1;
		DeviceLostMessage deviceLost = 2;
		NewDeviceMessage newDevice = 3;
	}
}

message ClientMessage {
	oneof payload {
		DashboardClientMessage dashboard = 1;
		MausIncomingMessage maus = 2;
	}
}
message ServerMessage {
	oneof payload {
		MausOutgoingMessage maus = 1;
		DashboardServerMessage dashboard = 2;
	}
}